style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,600;0,700;1,600;1,800&family=Roboto:wght@400;700&display=swap');

/* body styling */

body {
  background-color: #ffffff;
	color: #333333;
	margin: 32px auto;
	width: 1120px;
}

body.projects {
  background-color: #FDF1EC;
}

body.about {
  background-color: #FDF7EC;
}

body.resume {
  background-color: #F0F4EC;
}

body.contact {
  background-color: #F0F4F4;
}

/* header styling */

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* header a img {
  width: 212px;
  height: 104px;
} */

nav {
	font-family: Nunito;
	font-size: 32px;
  font-weight: 800;
  font-style: italic;
	line-height: 1.2;
}

nav a {
  margin: 0 0 0 40px;
  text-decoration: none;
  color: #333333;
  transition: color 0.3s, border-bottom 0.3s;
  border-bottom: 2px solid transparent;
}

nav a.color1 {
  margin: 0;
}

nav a.color1:hover, nav a.color1.selected {
  color: #E17637;
  border-bottom: 2px solid #E17637;
}

nav a.color2:hover, nav a.color2.selected {
  color: #F0A902;
  border-bottom: 2px solid #F0A902;
}

nav a.color3:hover, nav a.color3.selected {
  color: #6E8A55;
  border-bottom: 2px solid #6E8A55;
}

nav a.color4:hover, nav a.color4.selected {
  color: #597A7C;
  border-bottom: 2px solid #597A7C;
}

/* general element styling */

h1 {
  font-family: Nunito;
  font-size: 24px;
  font-weight: 600;
  font-style: italic;
  line-height: 1.3;
  text-align: center;
  grid-column: 2 / span 10;
}

button {
  padding: 4px 16px;
  border: none;
  color: #ffffff;
  cursor: pointer;
  font-size: 20px;
  font-family: Nunito;
  font-weight: 600;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  border-radius: 5px;
  transition: color 0.3s, background-color 0.3s;
}

section, ul {
  margin: 56px 0;
}

span {
  font-weight: 700;
  display: inline-block;
  line-height: 1.2em;
}

span.color1 {
  color: #e17637;
  border-bottom: 2px solid #e17637;
}

span.color2 {
  color: #f0a902;
  border-bottom: 2px solid #f0a902;
}

span.color3 {
  color: #6e8a55;
  border-bottom: 2px solid #6e8a55;
}

span.color4 {
  color: #597a7c;
  border-bottom: 2px solid #597a7c;
}

label {
  font-family: Nunito;
  font-weight: 600;
  font-size: 20px;
  line-height: 1.2;
  color: #333333;
}

input, textarea {
  width: 100%;
  padding: 8px;
  border: 2px solid #333333;
  font-style: normal;
  font-size: 16px;
  margin: 0 0 12px;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  border-radius: 5px;
}

input {
  height: 32px;
}

textarea {
  height: 224px;
}

input:focus, textarea:focus {
  border: 2px solid #597a7c;
}

p a {
  font-weight: 700;
}

p, footer {
  font-family: Roboto;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
}

footer div {
  color: #A9A9A9;
  grid-column: 5 / span 4;
  text-align: center;
}

/* page-specific element styling */

section.home, section.projects, section.about, section.resume, section.contact, footer {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  gap: 32px 32px;
  grid-auto-flow: dense;
}

/* index.html-specific element styling */

section.home {
  margin: 96px 0;
}

/* projects.html-specific element styling */

ul.projects {
  list-style: none;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(440px, 1fr));
  gap: 32px;
}

ul.projects li {
  border: 2px solid #F0C0A8;
  padding: 32px;
  background-color: #ffffff;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  border-radius: 5px;
  display: flex;
  gap: 12px;
}

ul.projects div.info {
  display: flex;
  flex-direction: column;
  flex: 1;
}

ul.projects h1 {
  text-align: left;
  margin: 0 0 8px;
}

ul.projects a {
  color: #e17637;
}

ul.projects div.bottom {
  margin-top: auto;
}

ul.projects p.skills {
  font-family: Roboto;
  font-size: 16px;
  font-weight: 400;
  font-style: italic;
  line-height: 1.5;
  color: #787878;
  margin: 16px 0 0 0;
}

ul.projects div.buttons {
  display: flex;
  gap: 24px;
  margin: 16px 0 0 0;
}

ul.projects button {
  background-color: #e17637;
}

ul.projects button:hover {
  box-shadow:0px 0px 0px 1px #e17637 inset;
  background-color: #fdf1ec;
  color: #e17637;
}

ul.projects img {
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  flex: 0.5;
  align-self: center;
}

/* about.html-specific element styling */

section.about div.image {
  grid-column: 2 / span 5;
  margin: 16px 0 0 0;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

section.about div.bio {
  grid-column: 7 / span 5;
}

section.about a {
  color: #F0A902;
}

/* resume.html-specific element styling */

section.header {
  margin: 56px 0 0 0;
}

section.header h1 {
  color: #6e8a55;
}

section.header h1 a {
  color: #6e8a55;
  font-weight: 700;
}

section.image1 {
	margin: 16px 0 0 0;
}

section.image2 {
  margin: 16px 0 56px 0;
}

section.image1 img, section.image2 img {
  grid-column: 3 / span 8;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

/* contact.html-specific element styling */

section.contact button {
  background-color: #597a7c;
}

section.contact button:hover {
  box-shadow:0px 0px 0px 2px #597a7c inset;
  background-color: #f0f4f4;
  color: #597a7c;
}

section.contact div.contact-side {
  grid-column: 1 / span 7;
}

section.contact div.form {
  margin: 0 48px;
  padding: 24px;
  background-color: #b6cfcf;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  border-radius: 5px;
}

section.contact div.socials-side {
  grid-column: 8 / span 5;
  margin: 238px 0 0 0;
}

section.contact div.icons {
  display: flex;
  justify-content: center;
  align-items: center;
}

section.contact div.icon1 {
/*   width: 56px;
  height: 56px; */
  margin: 0 32px 0 0;
}

section.contact div.icon2 {
/*   width: 66px;
  height: 56px; */
  margin: 0 0 0 32px;
}

section.contact div.contact-side h1, section.contact div.socials-side h1 {
  margin: 0 0 24px 0;
  color: #597a7c;
}

/* 
media query for smaller desktop size
max width = orig 1120 + 64 + 64 for edges
*/
@media (max-width: 1248px) {
  body {
    width: auto;
    margin: 32px 64px;
  }
}

/* media query for smaller screen size / large tablet size */
@media (max-width: 978px) {
  header {
    flex-direction: column;
  }
  
  section.about, section.resume, section.contact, footer {
    grid-template-columns: repeat(6, 1fr);
  	gap: 24px 24px;
  }
  
  section.about div.image, 
  section.about div.bio,
  section.header h1, 
  section.image1 img, 
  section.image2 img, 
  section.contact div.contact-side, 
  section.contact div.socials-side, 
  footer div {
    grid-column: 1 / span 6;
    width: 100%;
  }
  
  ul.projects, 
  section.about,
  section.contact {
    margin: 40px;
  }
  
  section.header {
    margin: 40px 0 0 0;
  }
  
  section.image1 img, section.image2 img {
    padding: 0 40px;
  }
  
  section.about div.image, section.contact div.form {
    margin: 0;
  }
  
  section.contact div.socials-side {
    margin: 16px 0 0 0;
  }
}

